tests/cases/conformance/decorators/invalid/decoratorOnVar.ts
declare function dec<T>(target: T): T;

@dec
var x: number;